[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/player_ui/GameOverScene.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player_ui/PauseScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player_ui/GameWonScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/visual/ui/season_ui/spr_season_indicator.png" type="Texture" id=4]
[ext_resource path="res://scripts/player/PlayerScript.gd" type="Script" id=5]
[ext_resource path="res://scenes/player_ui/ToolTipScene.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/visual/ui/season_ui/spr_season_hand.png" type="Texture" id=7]
[ext_resource path="res://scripts/player/Inventory.gd" type="Script" id=8]
[ext_resource path="res://assets/visual/ui/inventory/spr_button_unselected.png" type="Texture" id=9]
[ext_resource path="res://assets/visual/ui/inventory/spr_button_selected.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/pixelify_sans/static/PixelifySans-Bold.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://scenes/game_objects/AxeScene.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/visual/placing_target/spr_placing_target.png" type="Texture" id=13]
[ext_resource path="res://scenes/game_objects/HandmadeBeehiveScene.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/game_objects/FlowersScene.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/game_objects/FireplaceScene.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/game_objects/ShelterScene.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/game_objects/TreeOneScene.tscn" type="PackedScene" id=18]

[sub_resource type="Animation" id=2]
resource_name = "Head Bob"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.05, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump Land"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.05, 0 ), Vector3( 0, 0.05, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ NodePath("..") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CapsuleShape" id=1]
radius = 0.4

[sub_resource type="DynamicFont" id=7]
size = 42
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=5]
size = 36
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 11 )

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 5 )

[node name="PlayerHead" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )

[node name="PlayerCamera" type="Camera" parent="PlayerHead"]
fov = 90.0
far = 200.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerHead/PlayerCamera"]
"anims/Head Bob" = SubResource( 2 )
"anims/Jump Land" = SubResource( 4 )
anims/RESET = SubResource( 3 )

[node name="RayCast" type="RayCast" parent="PlayerHead"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collide_with_areas = true

[node name="PlayerHands" type="Spatial" parent="PlayerHead"]

[node name="Axe" parent="PlayerHead/PlayerHands" instance=ExtResource( 12 )]
transform = Transform( 0.139577, -0.463899, 0.874824, 0.78503, 0.590312, 0.187778, -0.603528, 0.660553, 0.446569, 0.936012, -0.833546, -0.388256 )

[node name="CollisionBodyCapsule" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="UI" type="Node" parent="."]

[node name="Pause" type="Node" parent="UI"]

[node name="PauseScene" parent="UI/Pause" instance=ExtResource( 2 )]
visible = false

[node name="GameEnd" type="Node" parent="UI"]

[node name="GameWonScene" parent="UI/GameEnd" instance=ExtResource( 3 )]
visible = false

[node name="GameOverScene" parent="UI/GameEnd" instance=ExtResource( 1 )]
visible = false

[node name="PlayerUI" type="Node2D" parent="UI"]

[node name="ActionTooltip" type="Node2D" parent="UI/PlayerUI"]
position = Vector2( 800, 450 )

[node name="ActionLabel" type="Label" parent="UI/PlayerUI/ActionTooltip"]
margin_right = 212.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 7 )
text = "Get honey"

[node name="Tooltip" parent="UI/PlayerUI" instance=ExtResource( 6 )]

[node name="SeasonUINode" type="Node2D" parent="UI/PlayerUI"]
position = Vector2( 32, 32 )

[node name="SeasonSprite" type="Sprite" parent="UI/PlayerUI/SeasonUINode"]
position = Vector2( 48, 48 )
rotation = 0.785398
texture = ExtResource( 4 )

[node name="SeasonHandwatch" type="Sprite" parent="UI/PlayerUI/SeasonUINode"]
position = Vector2( 48, 48 )
texture = ExtResource( 7 )

[node name="Inventory" type="Node2D" parent="UI/PlayerUI"]
position = Vector2( 2180, 450 )
script = ExtResource( 8 )

[node name="ButtonZero" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = -312.0
margin_right = 48.0
margin_bottom = -264.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonZeroLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonZero"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Empty hands"
align = 2
valign = 1

[node name="ButtonOne" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = -248.0
margin_right = 48.0
margin_bottom = -200.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonOneLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonOne"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Get axe"
align = 2
valign = 1

[node name="ButtonTwo" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = -184.0
margin_right = 48.0
margin_bottom = -136.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonTwoLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonTwo"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "No flower seeds available"
align = 2
valign = 1

[node name="ButtonThree" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = -120.0
margin_right = 48.0
margin_bottom = -72.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonThreeLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonThree"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "No tree seeds available"
align = 2
valign = 1

[node name="ButtonFour" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = -56.0
margin_right = 48.0
margin_bottom = -8.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonFourLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonFour"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Not enough wood for fireplace"
align = 2
valign = 1

[node name="ButtonFive" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = 8.0
margin_right = 48.0
margin_bottom = 56.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonFiveLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonFive"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Not enough wood for beehive"
align = 2
valign = 1

[node name="ButtonSix" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = 72.0
margin_right = 48.0
margin_bottom = 120.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonSixLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonSix"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "Not enough wood for shelter"
align = 2
valign = 1

[node name="ButtonSeven" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = 136.0
margin_right = 48.0
margin_bottom = 184.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonSevenLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonSeven"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "You don't have any honey"
align = 2
valign = 1

[node name="ButtonEight" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = 200.0
margin_right = 48.0
margin_bottom = 248.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonEightLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonEight"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "You don't have any berries"
align = 2
valign = 1

[node name="ButtonNine" type="TextureButton" parent="UI/PlayerUI/Inventory"]
margin_top = 264.0
margin_right = 48.0
margin_bottom = 312.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_focused = ExtResource( 10 )

[node name="ButtonNineLabel" type="Label" parent="UI/PlayerUI/Inventory/ButtonNine"]
margin_left = -592.0
margin_right = -16.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
text = "You don't have any apples"
align = 2
valign = 1

[node name="InfoUI" type="Node2D" parent="UI/PlayerUI"]
position = Vector2( 32, 868 )

[node name="FoodLabel" type="Label" parent="UI/PlayerUI/InfoUI"]
margin_left = 1.0
margin_top = -50.0
margin_right = 673.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 6 )
text = "99 apples, 99 berries, 99 honey jars"

[node name="SeedsLabel" type="Label" parent="UI/PlayerUI/InfoUI"]
margin_left = 1.0
margin_top = -98.0
margin_right = 673.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 6 )
text = "2 flower seeds, 2 tree saplings"

[node name="WoodPlankLabel" type="Label" parent="UI/PlayerUI/InfoUI"]
margin_left = 1.0
margin_top = -146.0
margin_right = 673.0
margin_bottom = -98.0
custom_fonts/font = SubResource( 6 )
text = "6 wood planks"

[node name="HealthLabel" type="Label" parent="UI/PlayerUI/InfoUI"]
margin_left = 1.0
margin_top = -195.0
margin_right = 673.0
margin_bottom = -147.0
custom_fonts/font = SubResource( 6 )
text = "Well fed"

[node name="PlacingNode" type="Spatial" parent="UI"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )

[node name="PlacingTarget" type="Sprite3D" parent="UI/PlacingNode"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1 )
texture = ExtResource( 13 )

[node name="HandmadeBeehive" parent="UI/PlacingNode" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
visible = false

[node name="Flowers" parent="UI/PlacingNode" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
visible = false

[node name="Fireplace" parent="UI/PlacingNode" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
visible = false

[node name="Shelter" parent="UI/PlacingNode" instance=ExtResource( 17 )]
visible = false

[node name="TreeOne" parent="UI/PlacingNode" instance=ExtResource( 18 )]
transform = Transform( 0.25, 0, 0, 0, -1.09278e-08, 0.25, 0, -0.25, -1.09278e-08, 0, 0, 0 )
visible = false
